objects/EUR_CRM_SalesOrderAutoNumber__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>EUR_CRM_Country_Code__c</fullName>
        <label>Country Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_LastNumber__c</fullName>
        <label>Last Number</label>
        <length>12</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>EUR_CRM_SalesOrderRecordType__c</fullName>
        <label>Sales Order Record Type</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>EUR_CRM_SalesOrderAutoNumber</label>
</CustomObject>